# ChangeLog for sys-fs/lvm2
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sys-fs/lvm2/ChangeLog,v 1.317 2013/09/14 14:39:36 pacho Exp $

  14 Sep 2013; Pacho Ramos <pacho@gentoo.org> lvm2-2.02.100.ebuild:
  Fix DEPEND on thin-provisioning-tools (#484722 by Alexander Tsoy)

*lvm2-2.02.100 (12 Sep 2013)

  12 Sep 2013; Samuli Suominen <ssuominen@gentoo.org> +lvm2-2.02.100.ebuild,
  +files/lvm2-2.02.100-ignored_loop.patch, +files/lvm2-2.02.100-lvm_path.patch,
  +files/lvm2-2.02.100-pvmove_segfault.patch,
  +files/lvm2-2.02.100-respect_ar_and_cc.patch,
  +files/lvm2-2.02.100-selinux_and_udev_static.patch,
  +files/lvm2-2.02.100-vg_free_segfault.patch:
  Version bump wrt #481154 by Alexander Tsoy. Respect CFLAGS wrt #480212 by
  removing forced -O2 optimization flag. Backport two fixes from upstream
  preventing segmentation fault. Backport fix from upstream for ignored loop
  devices. Replace hardcoding sed for systemd activation generator with
  upstream patch. Refresh -respect-cc.patch, -selinux-static.patch,
  -udev-static.patch since they didn't apply anymore.

  14 Aug 2013; Samuli Suominen <ssuominen@gentoo.org>
  -files/lvm2-2.02.95-udev185.patch, -lvm2-2.02.98.ebuild,
  -lvm2-2.02.99-r1.ebuild, -lvm2-2.02.99.ebuild:
  old

*lvm2-2.02.99-r2 (14 Aug 2013)

  14 Aug 2013; Samuli Suominen <ssuominen@gentoo.org>
  +files/lvm2-2.02.99-fix-mda-offset-size-overflow-4g-with-lvmetad.patch,
  +lvm2-2.02.99-r2.ebuild:
  Upstream patch for "Fix metadata area offset/size overflow if it's >= 4g and
  while using lvmetad."

  07 Aug 2013; Samuli Suominen <ssuominen@gentoo.org> lvm2-2.02.99-r1.ebuild:
  Include check for value of UEVENT_HELPER_PATH wrt #479756 by Alexander Tsoy.
  Remove useless warning about USE="-static" and sys-kernel/genkernel which now
  works with dynamic libraries since version 3.4.30.

  06 Aug 2013; Ian Stakenvicius <axs@gentoo.org>
  +files/lvm2-2.02.97-selinux-static.patch,