@@ -35,15 +35,15 @@ AUX lvm2-2.02.99-selinux-static.patch 4695 SHA256 62571ea45660dc518b36128d929927
 DIST LVM2.2.02.100.tgz 1324911 SHA256 450302f909a93a44710ed3ae70894d3774f2eab52ecb1e3e6cac16d0239bd3a0 SHA512 97cac59bae5627b29bd32d46e7fa96063874a6b17f20c2c7f3a82bb0a7c1d155da9dbd224c3201116544f866796ee2219a79e3478e62365b68c6a982eead0312 WHIRLPOOL 51a7a24184ea3db40da1cec238b6aae8a4db0f60779095eaaa4a44ea149504f34e6307b5fee5e7dc3aa94d834ab517b6607a3a25ff7a5c27434224447000df6f
 DIST LVM2.2.02.97.tgz 1193141 SHA256 edda82012e8a9e1f0b00ba5a331468d3e0201992be14c0dbea71bf564a51fc2b SHA512 c209054832f36d7b9cbf833c702410ac95c9de1e213b550c01c42f087fcae346d3c931c409184086bc1fcbcbc154c9a4f8b82b06291cefeb7ae22fe7a4c254a0 WHIRLPOOL d4dafde0ae1607cb231acbf07e8aecd579b9e9042e9356df1074a2683f5f2d1036a3483e1799cf7dd14e64f1f4c5506d3628979fd7128cea70ad45b653403dfa
 DIST LVM2.2.02.99.tgz 1317810 SHA256 493c9ad85bada036418671072355b2fc57fc30eb5a63fd14a7dfe8ed28dca040 SHA512 665c8be867b44a258e37e12f2202352dfe0d4b7a5018e041ef01ce53d59b88dd96195943f12bd6915ebadbc605340de138bb2268527fd830d35deb4d43ab561b WHIRLPOOL 13fbb82cada1b8c08c881070ce5400517e44b287402ff1e5637ba4b684b4af22a3c7197a0a004d4a43f3584ae257307bb3734e9f3152733368e39a1b7f8c9d89
-EBUILD lvm2-2.02.100.ebuild 7638 SHA256 7f83b3011b7958c7ec4e5aceb112a0bf4ddf981cae322731cb092aa8fdcb6498 SHA512 5178612dff3b76245b1e55fbe465ba82fbf32eba092e02475e1d1b0d6dad955b56813d9b4e3a423bdde0c14e6aa5ace3e40f6b9072aa48ed01448f583c14036e WHIRLPOOL efb000e88ebf5aa2a54711c81d148f26d4fc2e9c79e3cd8232e26ce0693756400bb12e531558cfd7bb15c654740d8e04c25cd0dcd0a6fc7d6d1071f8ec522ef9
+EBUILD lvm2-2.02.100-r1.ebuild 7602 SHA256 0dea511c7e791148975097bec1f346dc5280620a98447663cc0bbca353055e95 SHA512 b7c1c6f88917f62132e34fe5ab90fc10b18b83c69b7e0908d060b8681b8372743a82ab47ddf5851c965c6be167f5affad3d51c4633cb50800054698276980b36 WHIRLPOOL eda75c30f1df3491c1b97e6224de8eccf1b0ec107df21ae3f64e631ce03e7ef102350071bfe7bacfd4720c9c2ff665a27d6269e795156941ea21c01e6093ea19
 EBUILD lvm2-2.02.97-r1.ebuild 9072 SHA256 616ff463fda707204c5e92c3a22651ec3e87168ead21b859f6ad0f00c2775960 SHA512 d395b0dc1a18846f76bc79f7fef2cbb649bbee179ea800d6b82398ff113d21c84d987107d14397986d2dc7f5127345cde7e1c588ddfcab339e016f3133dc6080 WHIRLPOOL f14c3e31b83d73b4e996e47c1db7e79e293881dfb1bc519383cfdaac35331ff4fb0a735d2c138433855b1795f084552126b340624191ba8aaf0069011eb6d823
 EBUILD lvm2-2.02.99-r2.ebuild 8217 SHA256 3b2b043cb028b55af42e88a5567267ac837f648e4c5f6327b2e97989eb86d444 SHA512 1f831d00e140b6ffe5ba64a48bfef8ec11ae66981451c9d64d50a6e60c04ba05a4bdfda38400a4d1501e7d4c150e745d0e3ed9512e0f4294fa79286237b66f5a WHIRLPOOL a92d6ad1769a239a65312065074730e9ccc7149b4d71dd19cbee5eafa334c703dad24a8a55e039f0ecfa6187d5cf1e69f3ffcd022485f5f7f2498da0d6e8c929
-MISC ChangeLog 60874 SHA256 53c182b01ac6aedef01818ecc77095e7c403ed84572aa05018b3b7025ddceb27 SHA512 ee1b9aea501a5c33c842a0747d9bae63474f243b463288b900ca53c3c0bff3bcdd0e4c9a34e389b58e6513eebe7309cfc8ca7601870c571674bbe11da041ad6f WHIRLPOOL 7a91c2025d31dabb15f98db0893e9e6ecd2019f54f7ac5259691ee9995d0bc69379842b8dc979ecf800abb90237f35bea9b4f722c85310d174d9d3af048900d0
+MISC ChangeLog 61075 SHA256 6eb50df631d45fa079c1f6e4f390fdc3d271d5165c036613abc68c377aae980e SHA512 84f7c73c8f301e494896f8d67364aec6123a1ffddd9bc64305856a9fc3cd373994f8b344c462406f8c3ed72928ca44405986c3fe434ef5599738d04296e677f2 WHIRLPOOL f32222582dc0e70b6360cc81653b7d1dfaa5a31dce81ccaea8177d370cdc04a2dba3d5fcd569f0725b49ca0b32f548d269dec63a914fac17d64d16b2f8f25b46
 MISC metadata.xml 984 SHA256 8f554d97062552d62ce2d81c8e4536b3e97539a497dd8cddda3eeab24b4ef73a SHA512 9c0a10af6149817269590cd28e7dc7eb84539184d41123b12bfada3857f87d813199cfbecd7c8219ce1b6a70f4ee72cf7a911854fcdb1fbfd90e3146122bca7f WHIRLPOOL e98d441e34d6a8fe540c7526da3418417cfc10e31c52b42d7827b151f7e3e20f8b088ee49b3ebd67ec304143593a6319c8ea42094d62315e47f210b0e52fe149
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.20 (GNU/Linux)
+Version: GnuPG v2.0.21 (GNU/Linux)
 
-iEYEAREIAAYFAlI0dSoACgkQCaWpQKGI+9SZ1gCfUwKe8VMHkZaO0LXpDrQt7a5A
-vPoAn2br9Ab+ZLE7GaRVxnnJpZSJ17Uy
-=0+of
+iF4EAREIAAYFAlI0y80ACgkQC77qH+pIQ6QSvgD9GzvczWdGqDkcmq/srzgMHgsN
+dEVv2+2EfCWofqf0u58A/1+EFonjC6dM3PpCZTE+O/VP5FgSwkjK3BRVpqZbQxZo
+=13lA
 -----END PGP SIGNATURE-----
