@@ -1,6 +1,12 @@
 # ChangeLog for sys-fs/lvm2
 # Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-fs/lvm2/ChangeLog,v 1.317 2013/09/14 14:39:36 pacho Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-fs/lvm2/ChangeLog,v 1.318 2013/09/14 20:49:13 floppym Exp $
+
+*lvm2-2.02.100-r1 (14 Sep 2013)
+
+  14 Sep 2013; Mike Gilbert <floppym@gentoo.org> +lvm2-2.02.100-r1.ebuild,
+  -lvm2-2.02.100.ebuild:
+  Pass --exec-prefix to configure, bug 484752 by Alexander Tsoy.
 
   14 Sep 2013; Pacho Ramos <pacho@gentoo.org> lvm2-2.02.100.ebuild:
   Fix DEPEND on thin-provisioning-tools (#484722 by Alexander Tsoy)
